tests/rosetta/transpiler/Java/2048.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:5: error: incompatible types: Object cannot be converted to Map
    static java.util.Map full = r.get("full");
                                     ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:89: error: cannot find symbol
        int i = r.size() - 1;
                 ^
  symbol:   method size()
  location: variable r of type int[]
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:91: error: cannot find symbol
            out = java.util.stream.IntStream.concat(java.util.Arrays.stream(out), java.util.stream.IntStream.of(r.get(i))).toArray();
                                                                                                                 ^
  symbol:   method get(int)
  location: variable r of type int[]
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:131: error: incompatible types: Object cannot be converted to Map
            java.util.Map new_ = r.get("row");
                                      ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:135: error: array required, but Map found
                if (b[y][x] != new_[x]) {
                                   ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:138: error: array required, but Map found
b[y][x] = new_[x];
              ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:192: error: incompatible types: Object cannot be converted to Map
            java.util.Map new_ = r.get("row");
                                      ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:196: error: array required, but Map found
                if (b[y][x] != new_[y]) {
                                   ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:199: error: array required, but Map found
b[y][x] = new_[y];
              ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:268: error: incompatible types: Object cannot be converted to Map
        full = r.get("full");
                    ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:304: error: incompatible types: Object cannot be converted to Map
                full = r2.get("full");
                             ^
/tmp/TestJavaTranspiler_Rosetta_Golden2048472155227/001/Main.java:305: error: bad operand types for binary operator '&&'
                if (full && (!(Boolean)hasMoves(board))) {
                         ^
  first type:  Map
  second type: boolean
12 errors
